test/Fail/Issue1886-omitted-not-in-scope.err
Issue1886-omitted-not-in-scope.agda:12.9-10: error: [NotInScope]
Not in scope:
  a
  at Issue1886-omitted-not-in-scope.agda:12.9-10
    (did you mean 'A'?)
when scope checking a
